fix top spacing and dark mode code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,11 @@
 ---
 
 @import "assets/css/vs.css";
-@import "assets/css/zenburn.css" screen and (prefers-color-scheme: dark);
+
+.dark {
+  @nested-import "assets/css/zenburn.css";
+}
+/* @import "assets/css/zenburn.css" screen and (prefers-color-scheme: dark); */
 
 @tailwind base;
 @tailwind components;
